--- a/source/secpriv-module.html
+++ b/source/secpriv-module.html
@@ -343,7 +343,12 @@ For details, see <a href="search.html#revinclude">_revinclude</a>.
 given Resource to be created or updated. For example, a Privacy audit tracking down some data was recorded 
 when it is reported that the data should not have been gathered.
 </p>
-
+<p>
+  <em>Trigger:</em> When there is a need to trace Resource create / update that were authorized by a Consent.
+</p>
+<p>
+  <em>Approach:</em> AuditEvent can <a href="security.html#6.1.0.5.1">record Access Control decisions</a> including permit and deny, and can indicate when that Access Control decision included rules from a Patient's Consent (e.g., <a href="auditevent-example-consent-authz.html">Example Consent recorded in the AuditEvent as an AuditEvent.entity</a>).
+</p>
 
 <a name="deId"></a>
 <h4>De-Identification, pseudonymization, anonymization</h4>
