https://jira.hl7.org/browse/FHIR-40306 - added caution on use of obligations

--- a/source/obligations.html
+++ b/source/obligations.html
@@ -31,6 +31,10 @@ and <code>obligation</code> features of <a href="elementdefinition.html">Element
 Note that since the base specification is only describing the interfaces and resources, not any particular 
 solution, the base application does not specify any applications obligations in the resource definitions.
 </p>
+<p>
+Obligations may dive deeply into the functional capabilities of systems.  Most interoperability specifications tread lightly (and <b>SHOULD</b> tread lightly) 
+in this space.  However, when a specification is created for use in a narrowly defined space, setting very specific expectations on display, storage, data entry, etc. may be necessary.
+</p>
 
 <a name="mustSupport"></a>
 <h3>MustSupport</h3>
