https://jira.hl7.org/browse/FHIR-48660 - Fixed 80/20 documentation

--- a/source/overview-arch.html
+++ b/source/overview-arch.html
@@ -95,8 +95,8 @@ In addition, FHIR aligns to the following architectural principles:
 </p>
 <ol>
 <li>
-Reuse and Composability – FHIR resources are designed with the 80/20 rule in mind – focus
-on the 20% of requirements that satisfy 80% of the interoperability needs. To this end,
+Reuse and Composability – FHIR resources are designed based on an "80% rule" where only those elements that are expected 
+to be used by most implementers (~80%+ of systems) are included in the resource data models. To this end,
 resources are designed to meet the general or common data requirements of many use cases
 to avoid the proliferation of numerous, overlapping and redundant resources. Extension and customizations exist
 (see <a href="profiling.html">FHIR Profiles</a>) to allow common, somewhat generic resources to be adopted
