--- a/source/search.html
+++ b/source/search.html
@@ -385,6 +385,10 @@ parameter(s)</span>
   <span class="fhir-conformance">As with the self link, all relevant paging links SHALL be expressed as GET requests.</span>
   <span class="fhir-conformance">Servers SHOULD NOT include content that is considered sensitive in URLs, excluding the self link.</span>
 </p>
+<p>
+  For best practices on when to include or exclude paging links, see the
+  <a href="http.html#paging-best-practices">Paging Best Practices</a> section on the FHIR HTTP page.
+</p>
 
 <a name="entries"></a>
 <h4>Matches, Inclusions, and Outcomes - Bundle Entries</h4>
