removing ImmunizationRecommendation and ImmunizationEvaluation

--- a/source/history.html
+++ b/source/history.html
@@ -383,7 +383,7 @@ to a new type.
            <li><a href="evidence.html">Evidence</a></li>
            <li><a href="evidencevariable.html">EvidenceVariable</a></li>
            <li><a href="examplescenario.html">ExampleScenario</a></li>
-           <li><a href="immunizationevaluation.html">ImmunizationEvaluation</a></li>
+           <li><a href="https://build.fhir.org/ig/HL7/immunization-incubator/en/StructureDefinition-ImmunizationEvaluation.html">ImmunizationEvaluation</a></li>
            <li><a href="insuranceplan.html">InsurancePlan</a></li>
            <li><a href="invoice.html">Invoice</a></li>
            <li><a href="medicationknowledge.html">MedicationKnowledge</a></li>
@@ -521,7 +521,7 @@ to a new type.
        <a href="biologicallyderivedproduct.html">BiologicallyDerivedProduct</a>,
        <a href="eventdefinition.html">EventDefinition</a>,
        <a href="examplescenario.html">ExampleScenario</a>,
-       <a href="immunizationevaluation.html">ImmunizationEvaluation</a>,
+       <a href="https://build.fhir.org/ig/HL7/immunization-incubator/en/StructureDefinition-ImmunizationEvaluation.html">ImmunizationEvaluation</a>,
        <a href="invoice.html">Invoice</a>,
        ItemInstance,
        <a href="observationdefinition.html">ObservationDefinition</a>,
@@ -939,7 +939,6 @@ to a new type.
         <li><code>ImagingObjectSelection</code> - remove retrieveAETitle, rename retrieveUrl to url, add frames</li>
         <li><a href="imagingstudy.html">ImagingStudy</a> - add laterality, change url to attachment</li>
         <li><a href="immunization.html">Immunization</a> - add encounter, rename subject to patient, rename refusedIndicator to wasNotGiven, rename refusalReason to reasonNotGiven</li>
-        <li><a href="immunizationrecommendation.html">ImmunizationRecommendation</a> - rename subject to patient</li>
         <li><a href="list.html">List</a> - add title, status, change ordered to orderedBy, add note</li>
         <li><a href="location.html">Location</a> - remove status</li>
         <li><a href="medication.html">Medication</a> - add batch</li>
