--- a/source/resourceguide.html
+++ b/source/resourceguide.html
@@ -216,8 +216,8 @@ Supports the medication and immunization processes. Some points of note:
 <tr><td><a href="medicationrequest.html">MedicationRequest</a></td><td><a href="#future">Future</a></td><td>Act</td><td><a href="lifecycle.html#order">Request/Order</a>. This has a <a href="lifecycle.html#current">current List</a></td></tr>
 <tr><td><a href="medicationstatement.html">MedicationStatement</a></td><td><a href="#ongoing">Ongoing</a> / <a href="#past">Past</a></td><td>Act</td><td><a href="lifecycle.html#entity">Entity Availability Workflow</a>. This has a <a href="lifecycle.html#current">Current List</a></td></tr>
 <tr><td><a href="immunization.html">Immunization</a></td><td><a href="#past">Past</a></td><td>Act</td><td></td></tr>
-<tr><td><a href="immunizationevaluation.html">ImmunizationEvaluation</a></td><td><a href="#past">Past</a></td><td>Act</td><td></td></tr>
-<tr><td><a href="immunizationrecommendation.html">ImmunizationRecommendation</a></td><td><a href="#future">Future</a></td><td>Act</td><td></td></tr>
+<tr><td><a href="https://build.fhir.org/ig/HL7/immunization-incubator/en/StructureDefinition-ImmunizationEvaluation.html">ImmunizationEvaluation</a></td><td><a href="#past">Past</a></td><td>Act</td><td></td></tr>
+<tr><td><a href="https://build.fhir.org/ig/HL7/immunization-incubator/en/StructureDefinition-ImmunizationRecommendation.html">ImmunizationRecommendation</a></td><td><a href="#future">Future</a></td><td>Act</td><td></td></tr>
 <tr><td><a href="formularyitem.html">FormularyItem</a></td><td><a href="#past">Past</a></td><td>Role</td><td></td></tr>
 </table>
 
