--- a/source/search.html
+++ b/source/search.html
@@ -2678,7 +2678,7 @@ Notes about searching on Numbers:
 </p>
 <ul>
  <li>When a number search is used against a resource element that stores a simple integer (e.g.
- <a href="immunizationrecommendation-definitions.html#ImmunizationRecommendation.recommendation.doseNumber_x_">ImmunizationRecommendation.recommendation.doseNumber</a>), and the search parameter
+ <a href="https://build.fhir.org/ig/HL7/immunization-incubator/en/StructureDefinition-ImmunizationRecommendation-definitions.html#ImmunizationRecommendation.recommendation.doseNumber">ImmunizationRecommendation.recommendation.doseNumber</a>), and the search parameter
     is not expressed using the exponential forms, and does not include any non-zero digits after a decimal point,
     the significance issues cancel out and searching is based on exact matches.  Note that if there are non-zero digits after a decimal point,
     there cannot be any matches</li>
