--- a/source/usecases.html
+++ b/source/usecases.html
@@ -163,7 +163,7 @@ known decisions for which resources have been defined.
 </p>
 <table class="grid">
  <tr> <td><b>Decision</b></td> <td><b>Resources</b></td> <td><b>Invocation</b></td> </tr>
- <tr> <td>What immunizations should this patient have?</td> <td>Response: <a href="immunizationrecommendation.html">ImmunizationRecommendation</a></td> <td>The exact way to invoke this decision is not yet defined</td> </tr>
+ <tr> <td>What immunizations should this patient have?</td> <td>Response: <a href="https://build.fhir.org/ig/HL7/immunization-incubator/en/StructureDefinition-ImmunizationRecommendation.html">ImmunizationRecommendation</a></td> <td>The exact way to invoke this decision is not yet defined</td> </tr>
 </table>
 
 <p>
