--- a/source/workflow.html
+++ b/source/workflow.html
@@ -144,7 +144,7 @@ in order to support consistent definitions for schema and UML derived code.
                     </td>
                     <td>
                         <ul>
-                            <li><a href="immunizationrecommendation.html">ImmunizationRecommendation</a></li>
+                            <li><a href="https://build.fhir.org/ig/HL7/immunization-incubator/en/StructureDefinition-ImmunizationRecommendation.html">ImmunizationRecommendation</a></li>
                             <li><a href="medicationrequest.html">MedicationRequest</a></li>
                             <li><a href="nutritionorder.html">NutritionOrder</a></li>
                             <li><a href="requestorchestration.html">RequestOrchestration</a></li>
