--- a/source/medications-module.html
+++ b/source/medications-module.html
@@ -53,8 +53,8 @@ This module is concerned with resources and functionality in 3 main domains:
             <td>
                 <ul>
                     <li><a href="immunization.html">Immunization</a></li>
-                    <li><a href="immunizationevaluation.html">ImmunizationEvaluation</a></li>
-                    <li><a href="immunizationrecommendation.html">ImmunizationRecommendation</a></li>
+                    <li><a href="https://build.fhir.org/ig/HL7/immunization-incubator/en/StructureDefinition-ImmunizationEvaluation.html">ImmunizationEvaluation</a></li>
+                    <li><a href="https://build.fhir.org/ig/HL7/immunization-incubator/en/StructureDefinition-ImmunizationRecommendation.html">ImmunizationRecommendation</a></li>
                 </ul>
             </td>
         </tr>
@@ -125,11 +125,11 @@ This module is concerned with resources and functionality in 3 main domains:
 			This includes immunization of both humans and animals, but does not include the administration of non-vaccine agents,
 			even those that may have or claim to have immunological effects.</td></tr>
 	<tr>
-		<td><a href="immunizationrecommendation.html">ImmunizationRecommendation</a></td>
+		<td><a href="https://build.fhir.org/ig/HL7/immunization-incubator/en/StructureDefinition-ImmunizationRecommendation.html">ImmunizationRecommendation</a></td>
 		<td>A patient's point-in-time immunization and recommendation (i.e. forecasting a patient's immunization eligibility
 			according to a published schedule) with optional supporting justification</td></tr>
     	<tr>
-    		<td><a href="immunizationevaluation.html">ImmunizationEvaluation</a></td>
+    		<td><a href="https://build.fhir.org/ig/HL7/immunization-incubator/en/StructureDefinition-ImmunizationEvaluation.html">ImmunizationEvaluation</a></td>
     		<td>The ImmunizationEvaluation resource is intended to cover communicating the results of an evaluation of a vaccine administration event (documented using the Immunization resource) against a set of published recommendations (protocols).</td></tr>
 </table>
 
