FHIR-47280 - subscription-related definitions, clarifications, and disambiguation

--- a/source/help.html
+++ b/source/help.html
@@ -1450,6 +1450,18 @@ Comment out h1 header
         <dd>is a file that describes how to display
             an XML document of a given type. (See CSS)
         </dd>
+        <dt>Subscription Framework</dt>
+        <dd>is the mechanism in the FHIR specification for push-based (server-driven) notification of events. 
+            It involves the use of the Subscription, SubscriptionStatus, and SubscriptionTopic resources.
+        </dd>
+        <dt>Subscriber</dt>
+        <dd>a system or application that creates and maintains Subscription resources to receive notifications and/or 
+            a system or application that receives notifications on behalf of a managing organization.
+        </dd>
+        <dt>Subscription Provider</dt>
+        <dd>a FHIR server or related system that implements the Subscription Framework and sends notifications 
+            to subscribers when matching events occur.
+        </dd>
         <dt>Summary Searches</dt>
         <dd>is the way a client can request the
             FHIR server to return only a portion of the resources by using the
