--- a/source/mapping-language.html
+++ b/source/mapping-language.html
@@ -550,7 +550,7 @@ The following list specifies that transforms that can be specified. Each transfo
  <tr>
   <td>toDateTime</td> 
   <td>source, format string</td> 
-  <td>Parse a string into a date-time object, see <a href="date-op-details">Date Time Transformation Details</a> for format information.</td>
+  <td>Parse a string into a date-time object, see <a href="#date-op-details">Date Time Transformation Details</a> for format information.</td>
   <td>n/a</td>
  </tr>
  <tr>
@@ -566,7 +566,7 @@ The following list specifies that transforms that can be specified. Each transfo
  <tr>
   <td>toDate</td> 
   <td>source, format string</td> 
-  <td>Parse a string into a date object, see <a href="date-op-details">Date Time Transformation Details</a> for format information.</td>
+  <td>Parse a string into a date object, see <a href="#date-op-details">Date Time Transformation Details</a> for format information.</td>
   <td>n/a</td>
  </tr>
  <tr>
@@ -582,7 +582,7 @@ The following list specifies that transforms that can be specified. Each transfo
  <tr>
   <td>toTime</td> 
   <td>source, format string</td> 
-  <td>Parse a string into a time object, see <a href="date-op-details">Date Time Transformation Details</a> for format information.</td>
+  <td>Parse a string into a time object, see <a href="#date-op-details">Date Time Transformation Details</a> for format information.</td>
   <td>n/a</td>
  </tr>
  <tr>
